tests/baselines/reference/recursiveExportAssignmentAndFindAliasedType6.errors.txt
recursiveExportAssignmentAndFindAliasedType6_moduleE.ts(1,1): error TS2303: Circular definition of import alias 'self'.


==== recursiveExportAssignmentAndFindAliasedType6_moduleA.ts (0 errors) ====
    import moduleC = require("recursiveExportAssignmentAndFindAliasedType6_moduleC");
    import ClassB = require("recursiveExportAssignmentAndFindAliasedType6_moduleB");
    export var b: ClassB; // This should result in type ClassB
==== recursiveExportAssignmentAndFindAliasedType6_moduleC.ts (0 errors) ====
    import self = require("recursiveExportAssignmentAndFindAliasedType6_moduleD");
    export = self;
    
==== recursiveExportAssignmentAndFindAliasedType6_moduleD.ts (0 errors) ====
    import self = require("recursiveExportAssignmentAndFindAliasedType6_moduleE");
    export = self;
    
==== recursiveExportAssignmentAndFindAliasedType6_moduleE.ts (1 errors) ====
    import self = require("recursiveExportAssignmentAndFindAliasedType6_moduleC");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2303: Circular definition of import alias 'self'.
    export = self;
    
==== recursiveExportAssignmentAndFindAliasedType6_moduleB.ts (0 errors) ====
    class ClassB { }
    export = ClassB;
    